# videotaxi-speech-rs

./: Cargo.toml  LICENSE  README.md
example/: basic.rs
examples/: basic.rs
src/: audio.rs  client.rs  error.rs  lib.rs  types.rs
