[package]
name = "videotaxi-speech-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "videotaxi_speech_rs"
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
bytes = "1.10.1"
futures-util = "0.3.31"
http = "1.3.1"
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = [
    "rustls-tls-native-roots",
] }
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["v4"] }
